--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h1>Micro Sistema <span>V1</span></h1>
+    <h1>Micro Sistema <span>V1.2</span></h1>
 <ul>
     <h2>O que você vai encontrar nesse Sistema</h2>
     <li>Login</li>
@@ -7,11 +7,12 @@
     <li>Verificação de validação</li>
     <li>Aplicação da metodologia CRUD</li>
     <li>Server integrado a pasta do angular (JSON Server) </li>
+    <li>Sistema de Autenticação de Login ( Auth Guard )</li>
+    <li>Acesso do Tipo <span>User ou Admin</span></li>
 </ul>
 
 <ul>
     <h2>Aplicações Futura para este Sistema</h2>
-    <li>Sistema de Autenticação de Login ( Auth Guard )</li>
     <li>Blog</li>
     <li>Função de Recuperação de Conta</li>
     <li>Tabela de Paginação</li>
