--- a/src/styles.css
+++ b/src/styles.css
@@ -51,6 +51,7 @@ button{
     height: 35px;
     color: white;
     background-color: rgb(44, 44, 44);
+    cursor:pointer;
 }
 
 .fundo{
@@ -61,6 +62,11 @@ button{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.backgroundhomesystem{
+    background-image: url(/assets/florestgood.jpg);
+    background-position: center;
 }
 
 @media (max-width: 1360px){
